# A1Keyer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  platformio.ini  run_tests.sh
.github/workflows/: ci.yml  release-latest-tag.yml
docs/: ARCHITECTURE.md  TESTING.md
scripts/: merge_bin.py
src/: Log.h  MorseTable.cpp  MorseTable.h  audio_engine.cpp  audio_engine.h  cardputer_display.cpp  cardputer_display.h  display_interface.h  display_model.cpp  display_model.h  display_task.cpp  display_task.h  fast_math.cpp  fast_math.h  iambic_keyer.cpp  iambic_keyer.h  key_envelop.cpp  key_envelop.h  main.cpp  morse_constants.h  morse_decoder.cpp  morse_decoder.h  morse_encoder.cpp  morse_encoder.h  morse_generator.cpp  morse_generator.h  morse_key.cpp  morse_key.h  straight_keyer.cpp  straight_keyer.h  ui_layout.h
staging/: release-v0.1.0.md
test/: test_framework.h
test/mocks/: Arduino.h  arduino_mock.h
test/test_display_model/: test_display_model  test_display_model.cpp
test/test_iambic_keyer/: test_iambic_keyer.cpp
test/test_key_envelop/: test_key_envelop.cpp
test/test_morse_decoder/: test_morse_decoder.cpp
test/test_morse_encoder/: test_morse_encoder.cpp
test/test_morse_generator/: test_morse_generator.cpp
test/test_straight_keyer/: test_straight_keyer.cpp
